# StreamingAnalytics

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  test_output.txt
lwqueue/: clickhouse_queries.py  rabbitmq_clickhouse.py  rabbitmq_subscriber.py  streamlit_app.py  ui.py
tests/: test_all.py
