[tool.poetry]
name = "lwqueue"
version = "0.1.0"
description = ""
authors = ["D. Konan <donatien.konan.pro@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
rich = "^12.5.1"
pika = "^1.3.0"
requests = "^2.28.1"
clickhouse-driver = "^0.2.6"
taipy = "3.1.0"
streamlit = "1.40.0"
lock = "^2018.3.25.2110"
plotly = "6.0.0"
psycopg2-binary = "^2.9.3"
pandas = "^1.4.2"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
black = "^22.3.0"
isort = "^5.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 160
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 160
multi_line_output = 3
include_trailing_comma = true
